# FatFs

./: README.md  meson.build  meson.options  version.txt
config/: fatfs_config.h  ffconf.h.in
source/: diskio.c
