# Function Configurations
option('FATFS_FS_READONLY', type: 'boolean', value: false, 
       description: 'Read-only configuration that removes writing API functions')

option('FATFS_FS_MINIMIZE', type: 'integer', value: 0, choices: [0, 1, 2, 3],
       description: 'Minimization level to remove some basic API functions')

option('FATFS_USE_FIND', type: 'integer', value: 0, choices: [0, 1, 2],
       description: 'Enables filtered directory read functions')

option('FATFS_USE_MKFS', type: 'boolean', value: false,
       description: 'Enables f_mkfs() function')

option('FATFS_USE_FASTSEEK', type: 'boolean', value: false,
       description: 'Enables fast seek feature')

option('FATFS_USE_EXPAND', type: 'boolean', value: false,
       description: 'Enables f_expand() function')

option('FATFS_USE_CHMOD', type: 'boolean', value: false,
       description: 'Enables attribute control API functions')

option('FATFS_USE_LABEL', type: 'boolean', value: false,
       description: 'Enables volume label API functions')

option('FATFS_USE_FORWARD', type: 'boolean', value: false,
       description: 'Enables f_forward() function')

option('FATFS_USE_STRFUNC', type: 'integer', value: 0, choices: [0, 1, 2],
       description: 'Enables string functions')

option('FATFS_PRINT_LLI', type: 'boolean', value: false,
       description: 'Enables long long argument support in f_printf()')

option('FATFS_PRINT_FLOAT', type: 'boolean', value: false,
       description: 'Enables floating point argument support in f_printf()')

option('FATFS_STRF_ENCODE', type: 'integer', value: 3, choices: [0, 1, 2, 3],
       description: 'Character encoding for string functions')

# Locale and Namespace Configurations
option('FATFS_CODE_PAGE', type: 'integer', value: 932,
       description: 'OEM code page to be used on the target system')

option('FATFS_USE_LFN', type: 'integer', value: 0, choices: [0, 1, 2, 3],
       description: 'Enables Long File Name support')

option('FATFS_LFN_UNICODE', type: 'integer', value: 0, choices: [0, 1, 2, 3],
       description: 'Character encoding on the API when LFN is enabled')

option('FATFS_FS_RPATH', type: 'integer', value: 0, choices: [0, 1, 2],
       description: 'Configures support for relative path')

# Drive/Volume Configurations
option('FATFS_VOLUMES', type: 'integer', value: 1, min: 1, max: 10,
       description: 'Number of volumes (logical drives) to be used')

option('FATFS_STR_VOLUME_ID', type: 'boolean', value: false,
       description: 'Enables volume ID in arbitrary strings')

option('FATFS_MULTI_PARTITION', type: 'boolean', value: false,
       description: 'Enables support for multiple volumes on the physical drive')

option('FATFS_MIN_SS', type: 'integer', value: 512, choices: [512, 1024, 2048, 4096],
       description: 'Minimum sector size to be supported')

option('FATFS_MAX_SS', type: 'integer', value: 512, choices: [512, 1024, 2048, 4096],
       description: 'Maximum sector size to be supported')


option('FATFS_USE_TRIM', type: 'boolean', value: false,
       description: 'Enables support for ATA-TRIM')

# System Configurations
option('FATFS_FS_TINY', type: 'boolean', value: false,
       description: 'Enables tiny buffer configuration')

option('FATFS_FS_EXFAT', type: 'boolean', value: false,
       description: 'Enables support for exFAT filesystem')

option('FATFS_FS_NORTC', type: 'boolean', value: false,
       description: 'Disables timestamp feature if system has no RTC')

option('FATFS_FS_NOFSINFO', type: 'integer', value: 0, choices: [0, 1, 2, 3],
       description: 'Controls use of FSINFO on FAT32 volumes')

option('FATFS_FS_LOCK', type: 'integer', value: 0, min: 0,
       description: 'Enables file lock function to control duplicated file open')

option('FATFS_FS_REENTRANT', type: 'boolean', value: false,
       description: 'Enables re-entrancy (thread safety) of the FatFs module')

option('FATFS_FS_TIMEOUT', type: 'integer', value: 1000,
       description: 'Timeout period for file operations in OS time ticks')